gccida/c1/noce_get_alt_condition
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_alt_condition/src/ifcvt.c:1612:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v12; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_alt_condition/src/ifcvt.c:1617:4: error: expected ';' after expression
rtx v17; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_alt_condition/src/ifcvt.c:1617:5: error: use of undeclared identifier 'v17'
rtx v17; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_alt_condition/src/ifcvt.c:1620:4: error: expected ';' after expression
rtx v20; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_alt_condition/src/ifcvt.c:1620:5: error: use of undeclared identifier 'v20'; did you mean 'v10'?
rtx v20; // rax 
    ^~~
    v10
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_alt_condition/src/ifcvt.c:1610:5: note: 'v10' declared here
int v10; // ebp 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_alt_condition/src/ifcvt.c:1622:4: error: expected ';' after expression
rtx i; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_alt_condition/src/ifcvt.c:1622:5: error: use of undeclared identifier 'i'
rtx i; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_alt_condition/src/ifcvt.c:1623:4: error: expected ';' after expression
rtx v23; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_alt_condition/src/ifcvt.c:1623:5: error: use of undeclared identifier 'v23'
rtx v23; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_alt_condition/src/ifcvt.c:1625:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v26; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_alt_condition/src/ifcvt.c:1626:4: error: expected ';' after expression
rtx v27; // [rsp+8h] [rbp-50h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_alt_condition/src/ifcvt.c:1626:5: error: use of undeclared identifier 'v27'
rtx v27; // [rsp+8h] [rbp-50h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_alt_condition/src/ifcvt.c:1628:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v29; // [rsp+18h] [rbp-40h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_alt_condition/src/ifcvt.c:1638:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v7 = ( __int64)pc_set( if_info->jump)[1]; 
               ^~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_alt_condition/src/ifcvt.c:1643:29: error: invalid operands to binary expression ('uint64' (aka 'unsigned long long') and 'struct rtx_def')
v10 = *( _QWORD *)( v9 + 8) == if_info->jump[4]; 
      ~~~~~~~~~~~~~~~~~~~~~ ^  ~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_alt_condition/src/ifcvt.c:1648:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v13 = (  struct rtx_def *)cond[1]; 
                          ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_alt_condition/src/ifcvt.c:1649:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v14 = (  struct rtx_def *)if_info->cond_earliest[1]; 
                          ^~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_alt_condition/src/ifcvt.c:1656:32: error: expected expression
reg_equal_equiv_note = *( rtx *)( *( _QWORD *)&v14[2] + 16LL); 
                               ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_alt_condition/src/ifcvt.c:1660:30: error: expected expression
if ( rtx_equal_p( x, *( rtx *)( *( _QWORD *)&v14[2] + 8LL)) ) 
                             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_get_alt_condition/src/obj/ifcvt.o] Error 1
